--- a/assets/styles.css
+++ b/assets/styles.css
@@ -66,12 +66,13 @@ img {
 input {
   width: 100%;
   height: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 label {
   font-size: 20px;
   margin-bottom: 5px;
+  margin-top: 10px;
 }
 
 li {
